cabal-version:       3.0
name:                encode-decode
version:             0.0.1

-- A short (one-line) description of the package.
synopsis:            Encode decode test

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             NONE

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Rahul Singh

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          rahul.singh@juspay.in

-- A copyright notice.
-- copyright:

category:            Web

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md

flag opt
  description: off=GHC default, on=-O2
  default: True
  manual: True

common optimization-options
  if flag(opt)
    ghc-options: -O2
                 -fdicts-strict

-- library    uploader-internal
--   exposed-modules:     Uploader.Types
--   build-depends:       base
--                      , cereal
--                      , lens
--                      , profunctors
--                      , bytestring
--                      , text
--                      , containers
--                      , attoparsec
--                      , extra
--                      , errors
--                      , unordered-containers
--   hs-source-dirs:    uploader-internal

-- library lz4-internal
--   exposed-modules: LZ4
--                  , Streamly.LZ4
--                  , LZ4.Frame
--   build-depends:   base
--                  , bytestring
--                  , cereal
--                  , streamly
--                  , lens
--                  --, nothunks
--   hs-source-dirs:      lz4
--   include-dirs:        lz4/c
--   c-sources:           lz4/c/lz4.c
--   default-extensions:  CPP
--                      , EmptyDataDecls
--                      , ForeignFunctionInterface



executable encode-decode-drainer
  import: optimization-options
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       ProgramOptions

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      base
                    , streamly
                    , lens
                    , text
                    , bytestring
                    , warp
                    , optparse-applicative
                    , aeson
                    , exceptions
                    , containers
                    , prometheus-client
                    , wai-middleware-prometheus
                    , lens-aeson
                    , errors
                    , regex-compat
                    , streamly-core
                    , hw-kafka-client

  ghc-options:   -ddump-minimal-imports
                 -fsimpl-tick-factor=10000
                 -fdiagnostics-color=always
                 -fno-ignore-asserts
                 -fspec-constr-recursive=64
                 -fstatic-argument-transformation
                 -funbox-strict-fields
                 -fmax-worker-args=64
                 -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wno-orphans
                 -Wno-unused-top-binds
                 -threaded
                 -rtsopts
                 -fobject-code

  -- Directories containing source files.
  hs-source-dirs:      encode-decode-drainer

  -- Base language which the package is written in.
  default-language:    Haskell2010